policies/acm-configs/policygenerator-download/namespace.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: open-cluster-management-downloader
