policies/acm-configs/policygenerator-download/route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: policygen-downloader
  namespace: open-cluster-management-downloader
  labels:
    app: policygen-downloader
spec:
  to:
    kind: Service
    name: policygen-downloader
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
